fix scrollbar visibility

--- a/src/assets/components/TechniqueItem.css
+++ b/src/assets/components/TechniqueItem.css
@@ -1,8 +1,12 @@
 .tecnique-wrapper {
   display: flex;
+  width: 80%;
+  font-size: 0.8rem;
+  align-items: center;
   background-color: rgb(223, 223, 223);
   border-radius: 5px;
-  margin-bottom: 2px;
+  margin: 4px;
+  padding: 4px;
   flex-direction: column;
 }
 .tecnique-wrapper:nth-child(odd) {
@@ -11,29 +15,24 @@
 .tecnique-wrapper:hover {
   background-color: #f5f8fc;
   transition: 0.7s;
+  cursor: pointer;
 }
 .subtechniques-name {
+  width: 100%;
+  text-align: center;
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
   margin-bottom: 5px;
 }
 
-.subtechniques-list-box {
-  box-sizing: border-box;
-  padding: 8px;
-  height: 95%;
-  width: 95%;
-}
+
 .subtechniques-id {
   overflow: hidden;
   text-overflow: ellipsis;
   margin: 0 auto;
 }
-.subtechniques-list {
-  height: 75px;
-  /* overflow: auto; */
-}
+
 .subtechniques-event {
   color: white;
 }
@@ -54,32 +53,3 @@
   transition: 1s;
 }
 
-/* SCROLL BAR*/
-::-webkit-scrollbar-track {
-  background: #f1f1f1;
-  width: 4px;
-}
-::-webkit-scrollbar {
-  width: 3px !important;
-  margin-right: 50px;
-}
-::-webkit-scrollbar-thumb {
-  background: rgb(218, 217, 217);
-  border-radius: 20px;
-  margin-left: 5px;
-  margin-right: 5px;
-}
-
-@media (max-width: 1270px) {
-  .subtechniques-list {
-    height: 75px;
-    /* overflow: auto; */
-  }
-}
-
-@media (min-width: 1600px) {
-  .subtechniques-list {
-    height: 90px;
-    /* overflow: auto; */
-  }
-}
