--- a/src/assets/components/TechniquesMatrix.css
+++ b/src/assets/components/TechniquesMatrix.css
@@ -1,7 +1,25 @@
+
+/* SCROLL BAR*/
+::-webkit-scrollbar-track {
+  background: #dcdddd;
+  width: 3px;
+}
+::-webkit-scrollbar {
+  width: 2px !important;
+}
+::-webkit-scrollbar-thumb {
+  background: #999999;
+  border-radius: 19px;
+  margin-left: 4px;
+  margin-right: 4px;
+}
+
 .container {
   display: flex;
   flex-direction: column;
   padding-top: 27px;
+  height: 60vh;
+  background-color: #FFF   ;
 }
 .header-technique {
   display: flex;
@@ -9,13 +27,13 @@
   box-sizing: border-box;
   /* width: calc((100% / 14) ); */
   width: 100%;
-  height: 90vh;
+  height: 100%;
   /* overflow-x: auto; */
 }
 .technique-column {
   display: flex;
   flex-direction: column;
-  width: 102%;
+  align-items: end;
   /* height: 600px; */
   overflow-y: auto;
   margin-top: 5px;
@@ -28,16 +46,7 @@
 .header-table-wrapper {
   display: flex;
 }
-table {
-  width: 100%;
-  height: 100%;
-  /* overflow: auto; */
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  align-items: center;
-  text-align: center;
-}
+
 .mapping-list {
   position: relative;
   /* width: 100%; */
@@ -63,13 +72,11 @@ table {
   gap: 2px;
   flex: 0 0 100%;
 }
-table:last-child {
-  margin-right: 0;
-}
+
 .line {
   margin: 0 auto;
-  width: 95%;
-  border: 1px solid #989494;
+  width: 90%;
+  border: 1px solid #2D28CD;
 }
 
 @media (max-width: 1200px) {
